prepara to continuous delivery