@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 
-<!-- ~ Stratio Meta ~ ~ Copyright (c) 2014, Stratio, All rights reserved. 
+<!-- ~  Copyright (c) 2014, Stratio, All rights reserved. 
 	~ ~ This library is free software; you can redistribute it and/or modify 
 	it under the terms of the ~ GNU Lesser General Public License as published 
 	by the Free Software Foundation; either version ~ 3.0 of the License, or 
@@ -13,20 +13,25 @@
 	this library. -->
 
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://maven.apache.org/POM/4.0.0"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xmlns="http://maven.apache.org/POM/4.0.0"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.stratio.connector</groupId>
-	<artifactId>stratio-connector-streaming</artifactId>
+	<artifactId>stratio-connector-streaming-parent</artifactId>
 	<version>0.4.0-SNAPSHOT</version>
 	<description>Connector for Stratio Streaming</description>
 	<url>http://www.stratio.com</url>
-	<name>Streaming Connector</name>
-
+	<name>Streaming Connector parent</name>
+	<packaging>pom</packaging>
+	<parent>
+		<groupId>com.stratio</groupId>
+		<artifactId>parent</artifactId>
+		<version>0.1.0</version>
+	</parent>
 	<properties>
 		<crossdata.version>0.3.0-RC1</crossdata.version>
-		<commons.connector.version>0.5.0-SNAPSHOT</commons.connector.version>
+		<commons.connector.version>0.5.0-RC1</commons.connector.version>
 		<streaming.api.version>0.6.2</streaming.api.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -39,15 +44,16 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
-
+	<modules>
+		<module>doc</module>
+		<module>connector-streaming</module>
+	</modules>
 	<scm>
 		<connection>scm:git:git@github.com:Stratio/stratio-connector-streaming.git</connection>
 		<developerConnection>scm:git:git@github.com:Stratio/stratio-connector-streaming.git</developerConnection>
 		<url>https://github.com/Stratio/stratio-connector-streaming</url>
 	</scm>
-
 	<developers>
-
 		<developer>
 			<id>jmgomez</id>
 			<name>Jose Manuel Gómez</name>
@@ -68,144 +74,7 @@
 				<role>maintainer</role>
 			</roles>
 		</developer>
-
-
 	</developers>
-
-
-	<distributionManagement>
-
-		<repository>
-			<id>sonatype-nexus-staging</id>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-		</repository>
-
-		<snapshotRepository>
-			<id>sonatype-nexus-snapshots</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository>
-
-	</distributionManagement>
-
-	<dependencies>
-
-		<dependency>
-			<groupId>com.stratio.streaming</groupId>
-			<artifactId>streaming-api</artifactId>
-			<version>${streaming.api.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>com.datastax.cassandra</groupId>
-					<artifactId>cassandra-driver-core</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.mongodb</groupId>
-					<artifactId>mongo-java-driver</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.scalamock</groupId>
-					<artifactId>scalamock-scalatest-support_2.10</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.jboss.netty</groupId>
-					<artifactId>netty</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
-		<dependency>
-			<groupId>com.stratio.connector</groupId>
-			<artifactId>stratio-connector-commons</artifactId>
-			<version>${commons.connector.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.stratio.crossdata</groupId>
-			<artifactId>crossdata-connector</artifactId>
-			<version>${crossdata.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.7</version>
-		</dependency>
-
-
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
-			<scope>test</scope>
-		</dependency>
-
-
-		<dependency>
-			<groupId>org.powermock</groupId>
-			<artifactId>powermock-api-mockito</artifactId>
-			<version>1.5.5</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.powermock</groupId>
-			<artifactId>powermock-module-junit4</artifactId>
-			<version>1.5.5</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.testng</groupId>
-			<artifactId>testng</artifactId>
-			<version>6.8.8</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>com.stratio.connector</groupId>
-			<artifactId>stratio-connector-commons</artifactId>
-			<classifier>tests</classifier>
-			<version>${commons.connector.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-	</dependencies>
-
-
-	<profiles>
-		<profile>
-			<id>FT</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<version>2.18</version>
-						<configuration>
-							<includes>
-								<include>**/*FT.java</include>
-							</includes>
-							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-						</configuration>
-						<executions>
-							<execution>
-								<goals>
-									<goal>integration-test</goal>
-								</goals>
-								<configuration>
-									<includes>
-										<include>**/*FT.class</include>
-									</includes>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
-
-
 	<build>
 		<plugins>
 			<plugin>
@@ -254,13 +123,10 @@
 					<includes>
 						<include>**/*Test.java</include>
 					</includes>
-					<argLine>${jacocoUT-argline}</argLine>
-					<argLine>-noverify</argLine>
-					<skip></skip>
-					<testFailureIgnore>true</testFailureIgnore>
+					<argLine>${jacoco-UT-argline}</argLine>
+					<skipTests>${skipUTs}</skipTests>
 				</configuration>
 			</plugin>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
@@ -275,152 +141,23 @@
 					</archive>
 				</configuration>
 			</plugin>
-
-
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.7.1.201405082137</version>
-				<configuration>
-					<destFile>${basedir}/target/jacoco.exec</destFile>
-				</configuration>
 				<executions>
 					<execution>
-						<id>jacoco-initialize</id>
+						<id>pre-test</id>
 						<goals>
 							<goal>prepare-agent</goal>
 						</goals>
+						<configuration>
+							<destFile>${project.build.directory}/jacocoUT.exec</destFile>
+							<propertyName>jacoco-UT-argline</propertyName>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
-
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>2.6</version>
-				<configuration>
-					<aggregate>true</aggregate>
-					<formats>
-						<format>xml</format>
-					</formats>
-				</configuration>
-			</plugin>
-
-
-			<plugin>
-				<artifactId>crossdata-connector-maven-plugin</artifactId>
-				<groupId>com.stratio.crossdata</groupId>
-				<version>${crossdata.version}</version>
-				<configuration>
-					<mainClass>com.stratio.connector.streaming.core.StreamingConnector</mainClass>
-					<jmxPort>7188</jmxPort>
-				</configuration>
-			</plugin>
-
-
-<plugin>
-         <groupId>org.apache.maven.plugins</groupId>
-         <artifactId>maven-site-plugin</artifactId>
-         <version>3.4</version>
-         <configuration>
-             <reportPlugins>
-                 <plugin>
-                     <groupId>org.apache.maven.plugins</groupId>
-                     <artifactId>maven-project-info-reports-plugin</artifactId>
-                     <version>2.8</version>
-                     <reportSets>
-                         <reportSet>
-                             <reports></reports>
-                         </reportSet>
-                     </reportSets>
-                 </plugin>
-                 <plugin>
-                     <groupId>com.stratio.maven</groupId>
-                     <artifactId>sphinx-maven-plugin</artifactId>
-                     <version>2.0.0</version>
-                     <configuration>
-                         <builders>
-                             <entry>html</entry>
-                         </builders>
-                         <resources>
-                             <resource>
-                                 <directory>src/site/sphinx</directory>
-                                 <filtering>true</filtering>
-                                 <includes>
-                                     <include>conf.py</include>
-                                 </includes>
-                             </resource>
-                         </resources>
-                     </configuration>
-                 </plugin>
-             </reportPlugins>
-         </configuration>
-     </plugin>
-
- <plugin>
-                <groupId>com.stratio.mojo.unix</groupId>
-                <artifactId>unix-maven-plugin</artifactId>
-                <version>1.0-alpha-9</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <contact><![CDATA[Stratio <jmgomez@stratio.com>]]></contact>
-                    <contactEmail>jmgomez@stratio.com</contactEmail>
-                    <size>2048</size>
-                    <deb>
-                        <section>devel</section>
-                    </deb>
-                    <rpm>
-                        <group>stratio</group>
-                    </rpm>
-                    <assembly>
-                        <mkdirs>
-                            <paths>
-                                <path>etc/sds/stratio-connector-streaming</path>
-                                <path>etc/default</path>
-                            </paths>
-                            <attributes>
-                                <user>stratio</user>
-                                <group>stratio</group>
-                                <mode>644</mode>
-                            </attributes>
-                        </mkdirs>
-                        <copyDirectory>
-                            <from>target/stratio-connector-streaming-${project.version}/bin</from>
-                            <to>opt/sds/stratio-connector-streaming/bin</to>
-                        </copyDirectory>
-                        <copyDirectory>
-                            <from>target/stratio-connector-streaming-${project.version}/lib</from>
-                            <to>opt/sds/stratio-connector-streaming/lib</to>
-                        </copyDirectory>
-                        <copyDirectory>
-                            <from>target/stratio-connector-streaming-${project.version}/conf</from>
-                            <to>opt/sds/stratio-connector-streaming/conf</to>
-                        </copyDirectory>
-                        <copyDirectory>
-                            <from>src/main/template</from>
-                            <to>opt/sds/stratio-connector-streaming/template</to>
-                        </copyDirectory>
-                        <copyDirectory>
-                            <from>src/main/config</from>
-                            <to>etc/sds/stratio-connector-streaming</to>
-                        </copyDirectory>
-                        <copyDirectory>
-                            <from>src/main/unix/files_and_dirs/etc/default</from>
-                            <to>etc/default</to>
-                        </copyDirectory>
-                        <copyFile>
-                            <path>src/main/include/LICENSE</path>
-                            <toFile>opt/sds/stratio-connector-streaming/LICENSE</toFile>
-                        </copyFile>
-                        <copyFile>
-                            <path>src/main/include/NOTICE</path>
-                            <toFile>opt/sds/stratio-connector-streaming/NOTICE</toFile>
-                        </copyFile>
-                    </assembly>
-                </configuration>
-            </plugin>
-
 		</plugins>
 	</build>
-
 </project>
